--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ canvas {
     width: 100%;
 }
 
-button {
+.btns > button {
     background-color: #088395;
     border-radius: 8px;
     border-color: #37B7C3;
@@ -41,7 +41,7 @@ button {
     color: #EBF4F6;
 }
 
-button:not(:last-child) {
+.btns > button:not(:last-child) {
     margin-right: 10px;
 }
 
@@ -68,6 +68,53 @@ button:not(:last-child) {
 .restart:hover {
     box-shadow: rgba(8, 130, 149, 0.35) 0 -25px 18px -14px inset,rgba(8, 130, 149, 0.25) 0 1px 2px,rgba(8, 130, 149, 0.25) 0 2px 4px,rgba(8, 130, 149, 0.25) 0 4px 8px,rgba(8, 130, 149, 0.25) 0 8px 16px,rgba(8, 130, 149, 0.25) 0 16px 32px;
     transform: scale(1.05) rotate(-1deg);
+}
+
+.modal { 
+    border: 4px solid #088395;
+    border-radius: 8px;
+    background-color: #37B7C3;
+    color: #EBF4F6;
+    width: 450px;
+    padding: 30px 40px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    border-radius: 8px;
+    font-family: sans-serif;
+    display: none;
+}
+
+.modal h1 {
+    text-align: center;
+}
+
+.modal > button {
+    display: block;
+    margin: 0 0 20px auto;
+    background-color: transparent;
+    font-size: 30px;
+    color: #c5c5c5;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.modal p {
+    font-size: 14px;
+}
+
+.modal #flags-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.modal #flags-container button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
 
 .messages {
